BenchProcessor annotation processor creates its own truffle module layer